# adguard-sync-mdw

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  codex-plan.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
app/: config.py  config_manager.py  healthcheck.py  logging_setup.py  main.py  runtime.py  scheduler.py  storage.py  tls.py
app/adguard/: __init__.py  client.py  models.py
app/sync/: __init__.py  differ.py  engine.py  result.py
app/web/: routes.py
app/web/static/: style.css
app/web/templates/: base.html  drift.html  history.html  settings.html  status.html  status_content.html  value.html
tests/: conftest.py  test_client.py  test_config.py  test_config_manager.py  test_differ.py  test_engine.py  test_runtime.py  test_scheduler.py  test_storage.py  test_tls.py  test_web.py
