[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adguard-sync"
version = "1.0.0"
description = "Synchronise AdGuard Home configuration from one primary host to followers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "apscheduler>=3.10,<4",
  "cryptography>=42,<46",
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "pyyaml>=6,<7",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "respx>=0.21,<1",
  "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.web" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
