[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adguard-sync"
version = "1.2.1"
description = "Synchronise AdGuard Home configuration from one primary host to followers."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "apscheduler>=3.11.3,<4",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.139.0,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1.6,<4",
  "pydantic>=2.13.4,<3",
  "pydantic-settings>=2.14.2,<3",
  "pyyaml>=6.0.3,<7",
  "uvicorn[standard]>=0.49.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=1.4.0,<2",
  "respx>=0.23.1,<1",
  "ruff>=0.15.17,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.web" = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
